Remove About page

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
-title: About GovWifi
+title: Requirements
 weight: 1
 ---
 
-<%= partial 'documentation/about' %>
+<%= partial 'documentation/requirements' %>
