Add to YAML header reference to Google Analytics

--- a/source/acceptable_usage.html.md.erb
+++ b/source/acceptable_usage.html.md.erb
@@ -1,6 +1,10 @@
 ---
 title: GovWifi - Acceptable usage
 weight: 12
+output: 
+  html_document:
+    includes:
+       in_header: google_analytics.html
 ---
 
 <%= partial 'documentation/acceptable_usage' %>
