Update 'manage govwifi' to be more SEO friendly
We want to make clear that this content is for administrators in search engine results

--- a/source/manage.html.md.erb
+++ b/source/manage.html.md.erb
@@ -1,5 +1,6 @@
 ---
-title: GovWifi - Manage GovWifi
+title: Manage GovWifi in your organisation - GovWifi
+description: Guidance for public sector network administrators managing an existing GovWifi installation.
 weight: 8
 ---
 
