Make 'set up' more SEO friendly
We want to make clear that this content is for administrators in search engine results

--- a/source/set_up.html.md.erb
+++ b/source/set_up.html.md.erb
@@ -1,5 +1,6 @@
 ---
-title: GovWifi - Set up GovWifi
+title: Set up GovWifi in your organisation - GovWifi
+description: Guidance for public sector network administrators on creating a new wifi installation and configuring existing wifi infrastructure.
 weight: 4
 ---
 
