Update troubleshooting to be clearer for administrators
We need to make clear this content is for network administrators and not end-users in search engine results, as it currently ranks high for 'support' queries

--- a/source/troubleshooting.html.md.erb
+++ b/source/troubleshooting.html.md.erb
@@ -1,5 +1,6 @@
 ---
-title: GovWifi - Support
+title: Troubleshooting GovWifi in your organisation - GovWifi
+description: Troubleshooting for public sector network administrators creating or managing an existing GovWifi installation.
 weight: 10
 ---
 
