fix: Properly highlight 'Offer GovWifi' header link
Co-authored-by: Stéphane Maniaci <stephane.maniaci@digital.cabinet-office.gov.uk>

--- a/source/manage.html.md.erb
+++ b/source/manage.html.md.erb
@@ -2,6 +2,7 @@
 title: Manage GovWifi in your organisation - GovWifi
 description: Guidance for public sector network administrators managing an existing GovWifi installation.
 weight: 8
+parent: '/'
 ---
 
 <%= partial 'documentation/manage' %>
