--- a/source/set_up.html.md.erb
+++ b/source/set_up.html.md.erb
@@ -2,6 +2,7 @@
 title: Set up GovWifi in your organisation - GovWifi
 description: Guidance for public sector network administrators on creating a new wifi installation and configuring existing wifi infrastructure.
 weight: 4
+parent: '/'
 ---
 
 <%= partial 'documentation/set_up' %>
