--- a/source/troubleshooting.html.md.erb
+++ b/source/troubleshooting.html.md.erb
@@ -2,6 +2,7 @@
 title: Troubleshooting GovWifi in your organisation - GovWifi
 description: Troubleshooting for public sector network administrators creating or managing an existing GovWifi installation.
 weight: 10
+parent: '/'
 ---
 
 <%= partial 'documentation/troubleshooting' %>
