Update the accessibility statement

--- a/source/accessibility.html.md.erb
+++ b/source/accessibility.html.md.erb
@@ -1,7 +1,7 @@
 ---
 title: Accessibility statement for GovWifi technical documentation
-last_reviewed_on: 2020-12-21
-review_in: 6 months
+last_reviewed_on: 2021-08-25
+review_in: 3 months
 hide_in_navigation: true
 ---
 
@@ -9,7 +9,7 @@ hide_in_navigation: true
 
 This accessibility statement applies to the GovWifi technical documentation at [https://docs.wifi.service.gov.uk/](https://docs.wifi.service.gov.uk/).
 
-This website is run by the GovWifi team at the Government Digital Service (GDS). We want as many people as possible to be able to use this website. For example, that means you should be able to:
+This website is run by the GovWifi team at the Chief Digital Information Office (CDIO), part of Cabinet Office. We want as many people as possible to be able to use this website. For example, that means you should be able to:
 
 + change colours, contrast levels and fonts
 + zoom in up to 300% without problems
@@ -42,7 +42,7 @@ The Equality and Human Rights Commission (EHRC) is responsible for enforcing the
 
 ## Technical information about this website’s accessibility
 
-GDS is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
+The CDIO is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
 
 ### Compliance status
 
@@ -58,20 +58,20 @@ There are parts of this documentation that are not accessible because of [issues
 
 ## How we tested this website
 
-We last tested this website for accessibility issues in August 2020.
+The website was tested in May 2021 by the Digital Accessibility Centre (DAC) using a combination of automated and manual tests, including:
 
-We used manual and automated tests to look for issues such as:
+* JAWS 18 screen reader with Chrome
+* NVDA screen reader with Firefox
+* Dragon NaturallySpeaking 15 with Internet Explorer 11
+* ZoomText 11 (Fusion) with Chrome
+* VoiceOver with Safari (v12 or later) on iPhone
+* Zoom with Safari on iPad 
+* TalkBack on Android (Chrome browser)
 
-- lack of keyboard accessibility
-- link text that’s not descriptive
-- non-unique or non-hierarchical headings
-- italics, bold or block capital formatting
-- inaccessible formatting in general
-- inaccessible language
-- inaccessible diagrams or images
-- lack of colour contrast for text, important graphics and controls
-- images not having meaningful alt text
-- problems when using assistive technologies such as screen readers and screen magnifiers
+DAC also tested to make sure that the service can be used:
+
+* without a mouse
+* by disabled people who do not use specific assistive technology
 
 ## What we’re doing to improve accessibility
 
@@ -79,6 +79,6 @@ We plan to fix the issues with the Technical Documentation Template by the end o
 
 ## Preparation of this accessibility statement
 
-This statement was prepared on 18 September 2020. It was last reviewed on 21 December 2020.
+This statement was prepared on 18 September 2020. It was last reviewed on 25 August 2021.
 
-This website was last tested in August 2020. The test was carried out by the technical writing team at GDS. We used the [WAVE Web Accessibility Evaluation Tool](https://wave.webaim.org/) and a checklist we created with the help of the GDS accessibility team. We tested a sample of pages from each section of the site.
+We have plans to recommission an independent audit of our service at a future date.
