Update accessibility statement

--- a/source/accessibility.html.md.erb
+++ b/source/accessibility.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Accessibility statement for GovWifi technical documentation
-last_reviewed_on: 2021-08-25
+last_reviewed_on: 2024-05-20
 review_in: 3 months
 hide_in_navigation: true
 ---
@@ -9,7 +9,7 @@ hide_in_navigation: true
 
 This accessibility statement applies to the GovWifi technical documentation at [https://docs.wifi.service.gov.uk/](https://docs.wifi.service.gov.uk/).
 
-This website is run by the GovWifi team at the Chief Digital Information Office (CDIO), part of Cabinet Office. We want as many people as possible to be able to use this website. For example, that means you should be able to:
+This website is run by the GovWifi team at the Cabinet Office Digital (CO:D), part of Cabinet Office. We want as many people as possible to be able to use this website. For example, that means you should be able to:
 
 + change colours, contrast levels and fonts
 + zoom in up to 300% without problems
@@ -42,7 +42,7 @@ The Equality and Human Rights Commission (EHRC) is responsible for enforcing the
 
 ## Technical information about this website’s accessibility
 
-The CDIO is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
+The CO:D is committed to making its website accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.
 
 ### Compliance status
 
@@ -54,7 +54,7 @@ The content listed below is non-accessible for the following reasons.
 
 #### Non-compliance with the accessibility regulations
 
-There are parts of this documentation that are not accessible because of [issues caused by our Technical Documentation Template](https://tdt-documentation.london.cloudapps.digital/accessibility/#using-the-technical-documentation-template-for-your-own-documentation).
+There are parts of this documentation that are not accessible because of [issues caused by our Technical Documentation Template](https://github.com/alphagov/tdt-documentation).
 
 ## How we tested this website
 
@@ -75,6 +75,6 @@ DAC also tested to make sure that the service can be used:
 
 ## Preparation of this accessibility statement
 
-This statement was prepared on 18 September 2020. It was last reviewed on 25 August 2021.
+This statement was prepared on 18 September 2020. It was last reviewed on 20 May 2024.
 
 We have plans to recommission an independent audit of our service at a future date.
