configure tech-docs for manual spaniel monitoring

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,7 +1,9 @@
 ---
 title: Offer GovWifi in your public sector organisation
-description: Technical documentation for public sector network administrators covering how to set up and manage GovWifi in your organisation.
 weight: 10
+last_reviewed_on: 2024-07-09
+review_in: 3 months
+description: Technical documentation for public sector network administrators covering how to set up and manage GovWifi in your organisation.
 ---
 
 <%= partial 'documentation/introduction' %>
