--- a/source/manage.html.md.erb
+++ b/source/manage.html.md.erb
@@ -1,5 +1,7 @@
 ---
 title: Manage GovWifi in your organisation - GovWifi
+last_reviewed_on: 2024-07-09
+review_in: 3 months
 description: Guidance for public sector network administrators managing an existing GovWifi installation.
 weight: 40
 parent: '/'
