--- a/source/set_up.html.md.erb
+++ b/source/set_up.html.md.erb
@@ -2,6 +2,8 @@
 title: Set up GovWifi in your organisation - GovWifi
 description: Guidance for public sector network administrators on creating a new wifi installation and configuring existing wifi infrastructure.
 weight: 30
+last_reviewed_on: 2024-07-09
+review_in: 6 months
 parent: '/'
 ---
 
