--- a/source/troubleshooting.html.md.erb
+++ b/source/troubleshooting.html.md.erb
@@ -2,6 +2,8 @@
 title: Troubleshooting GovWifi in your organisation - GovWifi
 description: Troubleshooting for public sector network administrators creating or managing an existing GovWifi installation.
 weight: 60
+last_reviewed_on: 2024-07-08
+review_in: 6 months
 parent: '/'
 ---
 
