--- a/source/certificate-rotation.html.md.erb
+++ b/source/certificate-rotation.html.md.erb
@@ -1,5 +1,7 @@
 ---
 title: Certificate rotation - GovWifi
+last_reviewed_on: 2024-07-09
+review_in: 6 months
 description: Guidance for public sector network administrators on the annual GovWifi certificate rotation.
 weight: 50
 parent: '/'
